--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "homepage": "https://github.com/webbestmaster/seatcc#readme",
   "dependencies": {
     "babel-eslint": "^8.2.1",
-    "eslint": "^4.17.0"
+    "canvas": "^1.6.9",
+    "chai": "^4.1.2",
+    "eslint": "^4.17.0",
+    "mocha": "^5.0.0",
+    "mochawesome": "^3.0.2",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
