--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "babel-eslint": "^8.2.1",
     "canvas": "^1.6.9",
     "chai": "^4.1.2",
+    "dot": "^1.1.2",
     "eslint": "^4.17.0",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.2",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^3.6.0"
   }
 }
