--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "canvas": "^1.6.9",
     "chai": "^4.1.2",
     "dot": "^1.1.2",
+    "dotenv": "^6.0.0",
     "eslint": "^4.17.0",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.2",
